# autobot

./: README.md  pyproject.toml
src/tests/: test_autobot.py
src/tests/tasks/: pipeline1.yml
